--- a/app/src/main/res/layout/item_post.xml
+++ b/app/src/main/res/layout/item_post.xml
@@ -11,8 +11,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        android:paddingRight="@dimen/padding_post_item"
-        android:paddingLeft="@dimen/padding_post_item">
+        android:paddingLeft="@dimen/padding_post_item"
+        android:paddingRight="@dimen/padding_post_item">
 
         <de.hdodenhof.circleimageview.CircleImageView
             android:id="@+id/imgAvatar"
@@ -57,58 +57,64 @@
         android:layout_height="200dp"
         android:layout_marginBottom="@dimen/margin_between_item"
         android:layout_marginTop="@dimen/margin_between_item"
-        android:scaleType="centerCrop"/>
+        android:scaleType="centerCrop" />
 
-    <TextView
-        android:id="@+id/tvPrice"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center_horizontal"
-        android:layout_marginBottom="@dimen/margin_between_item"
-        android:layout_marginTop="@dimen/margin_between_item"
-        android:background="@drawable/background_price"
-        android:paddingBottom="8dp"
-        android:paddingLeft="16dp"
-        android:paddingRight="16dp"
-        android:paddingTop="8dp"
-        android:textColor="@android:color/white"
-        tools:text="50$ per month" />
-
-    <LinearLayout
+    <RelativeLayout
 
         android:id="@+id/lnControlButtons"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:gravity="right"
         android:orientation="horizontal">
 
-        <Button
-            android:id="@+id/btnComment"
-            android:layout_width="@dimen/size_buttons_control"
-            android:layout_height="@dimen/size_buttons_control"
-            android:layout_margin="@dimen/margin_between_buttons_control"
-            android:background="@drawable/ic_comment" />
+        <TextView
+            android:id="@+id/tvPrice"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_vertical|left"
+            android:layout_marginBottom="@dimen/margin_between_item"
+            android:layout_marginTop="@dimen/margin_between_item"
+            android:background="@drawable/background_price"
+            android:paddingBottom="8dp"
+            android:paddingLeft="16dp"
+            android:paddingRight="16dp"
+            android:paddingTop="8dp"
+            android:textColor="@android:color/white"
+            tools:text="50$ per month" />
 
-        <Button
-            android:id="@+id/btnShare"
-            android:layout_width="@dimen/size_buttons_control"
-            android:layout_height="@dimen/size_buttons_control"
-            android:layout_margin="@dimen/margin_between_buttons_control"
-            android:background="@drawable/ic_share" />
+        <LinearLayout
+            android:layout_alignParentEnd="true"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="right">
 
-        <Button
-            android:id="@+id/btnBookmark"
-            android:layout_width="@dimen/size_buttons_control"
-            android:layout_height="@dimen/size_buttons_control"
-            android:layout_margin="@dimen/margin_between_buttons_control"
-            android:background="@drawable/ic_bookmark" />
+            <Button
+                android:id="@+id/btnComment"
+                android:layout_width="@dimen/size_buttons_control"
+                android:layout_height="@dimen/size_buttons_control"
+                android:layout_margin="@dimen/margin_between_buttons_control"
+                android:background="@drawable/ic_comment" />
 
-    </LinearLayout>
+            <Button
+                android:id="@+id/btnShare"
+                android:layout_width="@dimen/size_buttons_control"
+                android:layout_height="@dimen/size_buttons_control"
+                android:layout_margin="@dimen/margin_between_buttons_control"
+                android:background="@drawable/ic_share" />
+
+            <Button
+                android:id="@+id/btnBookmark"
+                android:layout_width="@dimen/size_buttons_control"
+                android:layout_height="@dimen/size_buttons_control"
+                android:layout_margin="@dimen/margin_between_buttons_control"
+                android:background="@drawable/ic_bookmark" />
+
+        </LinearLayout>
+    </RelativeLayout>
 
     <View
-        android:layout_margin="8dp"
         android:layout_width="match_parent"
         android:layout_height="1dp"
-        android:background="@android:color/darker_gray"/>
+        android:layout_margin="8dp"
+        android:background="@android:color/darker_gray" />
 
 </LinearLayout>
